--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
-    "react-native-screens": "^2.12.0"
+    "react-native-screens": "^2.12.0",
+    "react-native-searchable-dropdown": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
