--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.1",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
     "react-native-searchable-dropdown": "^1.1.1",
